--- a/index.html
+++ b/index.html
@@ -3,23 +3,39 @@
 	<head> 
 		<meta charset="UTF-8"> 
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Your company website</title> 
+		<title>Extra Project</title> 
 	</head>
 	<body>
-		<header>
-			<nav class="container">
-			    <div clcass="row">
-  					<img src="//placehold.it/150x30">
-  					<ul>
-  						<li><a href=”#”>Features</a></li>
-  						<li><a href=”#”>Works</a></li>
-  						<li><a href=”#”>Our Team</a></li>
-  						<li><a href=”#”>Testimonials</a></li>
-  						<li><a href=”#”>Download</a></li>
-  					</ul>
-			    </div>
-			</nav>
+		<header class="top-background">
+				<div class="extra-margins">
+						<h1 class="flex-centered">Your favorite one page multi purpose template</h1>
+				</div>
 		</header>
+		<section class="benefits extra-margins">
+			<div class="row with-margins">
+				<div class="col-md-4 col-xs-12">
+					<h2 class="research">Research</h2>
+					<p class="small-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum imperdiet ex</p>
+				</div>
+				<div class="col-md-4 col-xs-12">
+					<h2 class="desktop">Fully customizable</h2>
+					<p class="small-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum imperdiet ex</p>
+				</div>
+				<div class="col-md-4 col-xs-12">
+					<h2 class="cogs"> Work and Work</h2>
+					<p class="small-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum imperdiet ex</p>
+				</div>
+			</div>
+		</section>
+		<section class="gallery">
+			<div class="row">
+				<img src="https://static.pexels.com/photos/188960/pexels-photo-188960.jpeg" alt="image1" class="img-responsive col-md-3 col-xs-12">
+				<img src="https://static.pexels.com/photos/7342/pexels-photo.jpeg" alt="image2" class="img-responsive col-md-3 col-xs-12">
+				<img src="https://static.pexels.com/photos/31423/pexels-photo-31423.jpg" alt="image3" class="img-responsive col-md-3 col-xs-12">
+				<img src="https://static.pexels.com/photos/210012/pexels-photo-210012.jpeg" alt="image4" class="img-responsive col-md-3 col-xs-12">
+			</div>
+		</section>
 	</body>
